# libpinggy

./: .gitignore  CMakeLists.txt  ChangeLog.md  ChangedLog.md  CodingStyle.md  LICENSE  README.md  version.txt
.devcontainer/: Makefile  devcontainer.json  dockerbuild.Dockerfile
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_on_public_machine.yml  build_on_public_runner.yml  build_windows.yml  build_windows_public_machine.yml  release_linux.yml  release_macos.yml  release_on_public_runner.yml  release_windows.yml
bindings/c/: Makefile  example.c  example_thread.c
bindings/python/: example.py  test.py
bindings/python/pinggy/: __init__.py  __version__.py  core.py  loader.py  pylib.py
crossbuilding/linux/: Makefile  buildForLinux.sh  buildInDocker.sh  buildLocal.sh  crossbuildingpinggy.Dockerfile
crossbuilding/macos/: buildForMacos.sh
crossbuilding/macos/utils/: app-signing.yml
crossbuilding/windows/: buildForSingleArch.bat  buildForWindows-old.bat  buildForWindows.bat  buildIndividualSsl.bat  buildOpenSsl.bat  opensslbuild.bat
crossbuilding/windows/utilities/: install_buildtools.bat  install_nasm.bat  install_pearl.bat  install_visual_studio.bat
src/: CMakeLists.txt  platform_config.h.in
src/client/: CMakeLists.txt  ClientMain.cc  cli_getopt.c  cli_getopt.h  client_main.c
src/cmake/: common.cmake  commonFuncDef.cmake  linux.cmake  macos.cmake  platform_config.cmake  windows.cmake
src/common/: CMakeLists.txt
src/common/net/: AddressCache.cc  AddressCache.hh  CMakeLists.txt  ConFlags.hh  ConnectionListener.cc  ConnectionListener.hh  ConnectionMetadata.cc  ConnectionMetadata.hh  DummyConnection.cc  DummyConnection.hh  NetworkConnection.cc  NetworkConnection.hh  SslConnectionListener.cc  SslConnectionListener.hh  SslNetConnBio.cc  SslNetConnBio.hh  SslNetworkConnection.cc  SslNetworkConnection.hh  UdpConnection.cc  UdpConnection.hh
src/common/platform/: Build.hh  CMakeLists.txt  ContainerStreaming.hh  Defer.hh  Log.cc  Log.hh  PinggyWriter.hh  PrimitiveStreaming.hh  SharedPtr.cc  SharedPtr.hh  Version.hh  app_foreach_macro.h  assert_pinggy.h  log.h  network.c  network.h  networkaddresses.c  pinggy_types.h  platform.h  platform_nix.c  platform_win.c
src/common/poll/: CMakeLists.txt  FutureTask.hh  PinggyPoll.cc  PinggyPoll.hh  PinggyPollCommon.hh  PinggyPollGeneric.cc  PinggyPollGeneric.hh  PinggyPollLinux.cc  PinggyPollLinux.hh  PinggyPollMac.cc  PollableFD.cc  PollableFD.hh  Task.hh  ThreadPool.cc  ThreadPool.hh
src/common/utils/: CMakeLists.txt  CertificateFileDetail.cc  CertificateFileDetail.hh  Json.hh  JsonH.hh  NetworkStreamer.cc  NetworkStreamer.hh  RawData.cc  RawData.hh  Semaphore.cc  Semaphore.hh  StringUtils.cc  StringUtils.hh  TemplateStreaming.hh  TunnelCommon.cc  TunnelCommon.hh  Utils.cc  Utils.hh  UtilsJson.cc  UtilsJson.hh
src/protocol/: CMakeLists.txt  Channel.cc  Channel.hh  ChannelConnectionForwarder.cc  ChannelConnectionForwarder.hh  Schema.cc  Schema.hh  Session.cc  Session.hh  SessionFeatures.cc  SessionFeatures.hh
src/protocol/transport/: Deserialization.cc  Deserialization.hh  PathRegistry.cc  PathRegistry.hh  PinggyValue.cc  PinggyValue.hh  SchemaBodyGenerator.hh  SchemaHeaderGenerator.hh  Serialization.cc  Serialization.hh  TransportCommon.hh  TransportManager.cc  TransportManager.hh  receiver.py  sender.py
src/sdk/: API_CPP.hh  CMakeLists.txt  Pinggy_c.cc  RefTable.hh  Sdk.cc  Sdk.hh  SdkChannelWraper.cc  SdkChannelWraper.hh  SdkConfig.cc  SdkConfig.hh  SdkException.hh  pinggy.h
